--- a/profile/css/profilestyles.css
+++ b/profile/css/profilestyles.css
@@ -12,6 +12,8 @@ body {
   background-image: url("../../img/topimg.JPG");
   background-size: cover;
   background-attachment:fixed;
+  background-color:rgba(255,255,255,0.2);
+  background-blend-mode:lighten;
 }
 
 
